@@ -1,13 +1,10 @@
 package com.ptit.ttcs.bookstore.controller;
 
-import com.ptit.ttcs.bookstore.domain.Category;
-import com.ptit.ttcs.bookstore.domain.DTO.Category.CategoryDTO;
-import com.ptit.ttcs.bookstore.domain.Mapper.CategoryMapper;
-import com.ptit.ttcs.bookstore.domain.Mapper.PublisherMapper;
-import com.ptit.ttcs.bookstore.repository.CategoryRepository;
-import com.ptit.ttcs.bookstore.service.CategoryService;
+import com.ptit.ttcs.bookstore.domain.enums.Category;
+import com.ptit.ttcs.bookstore.domain.enums.Language;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,35 +13,19 @@ import java.util.stream.Collectors;
 
 public class CategoryController {
 
-    private final CategoryService categoryService;
-
-    public CategoryController(CategoryService categoryService) {
-        this.categoryService = categoryService;
-    }
 
     @GetMapping("/admin/resource/category/all")
-    public List<CategoryDTO> getAllCategories() {
-        return categoryService.findAll().stream()
-                .map(CategoryMapper.INSTANCE::toDTO)
-                .toList();
+    public List<String> getAllCategories() {
+        return Arrays.stream(Category.values())
+                .map(Enum::name)
+                .collect(Collectors.toList());
     }
 
-    @GetMapping("/admin/resource/category/{id}")
-    public CategoryDTO getCategoryById(@PathVariable Long id) {
-        Category category = categoryService.findById(id);
-        return CategoryMapper.INSTANCE.toDTO(category);
-    }
-
-    @PostMapping("/admin/resource/category/create")
-    public CategoryDTO createCategory(@RequestBody CategoryDTO categoryDTO) {
-        Category category = CategoryMapper.INSTANCE.toCategory(categoryDTO);
-        Category savedCategory = categoryService.save(category);
-        return CategoryMapper.INSTANCE.toDTO(savedCategory);
-    }
-
-    @DeleteMapping("/admin/resource/category/delete/{id}")
-    public void deleteCategory(@PathVariable Long id) {
-        categoryService.deleteById(id);
+    @GetMapping("/admin/resource/language/all")
+    public List<String> getAllLanguagues() {
+        return Arrays.stream(Language.values())
+                .map(Enum::name)
+                .collect(Collectors.toList());
     }
 
 }
